# summer_star_company

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: be.md  fe.md  nfc-agent.md
.claude/commands/: check-docs.md  check-ssot.md
.claude/git-hooks/: pre-commit
.claude/scripts/: on-prompt.sh  on-stop.sh
admin/: eslint.config.mjs  package.json  pnpm-lock.yaml
admin/app/: layout.tsx  page.tsx
agent/: .dockerignore  Dockerfile  pyproject.toml
agent/nfc_agent/: __main__.py  client.py  config.py  feedback.py  main.py  reader.py
agent/systemd/: nfc-agent.service
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6853668a5e90_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: access.py  auth.py  cards.py  logs.py  stats.py  users.py
backend/app/core/: config.py  deps.py  exceptions.py  security.py  uid.py
backend/app/db/: base.py  models.py
backend/app/dtos/: access.py  users.py
backend/app/repos/: access_log_repo.py  card_repo.py  user_repo.py
backend/app/schemas/: access.py  auth.py  cards.py  logs.py  stats.py  users.py
backend/app/services/: access_service.py  auth_service.py  card_reader.py  card_service.py  log_service.py  stats_service.py  user_service.py
backend/scripts/: create_admin.py
docs/: MAP.md
docs/architecture/: overview.md  repo-layout.md  security.md
docs/conventions/: common.md  python.md  typescript.md
scripts/: dev-admin.sh  dev-agent.sh  dev-backend.sh  dev-down.sh  dev-up.sh  dev.sh
(+30 files in other folders)
