[project]
name = "summer-star-nfc-agent"
version = "0.1.0"
description = "사무실 출입 NFC 에이전트 (Pi 배포)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyscard>=2.3",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nfc_agent"]
