[project]
name = "summer-star-backend"
version = "0.1.0"
description = "NFC 출입 시스템 백엔드 (FastAPI)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "pydantic-settings>=2.5",
    "pyscard>=2.3",  # 등록 리더(#2) PC/SC 인터페이스
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line-length는 formatter가 처리
    "N811",  # SQLAlchemy ENUM/UUID 등 PascalCase alias 허용
]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
